# owl

./: .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  README.md
.github/workflows/: codeql.yml  test.yml
daemon/: CMakeLists.txt  core.c  core.h  corewlan.h  corewlan.m  io.c  io.h  netutils.c  netutils.h  owl.c
src/: CMakeLists.txt  channel.c  channel.h  circular_buffer.c  circular_buffer.h  election.c  election.h  frame.c  frame.h  ieee80211.h  log.c  log.h  peers.c  peers.h  rx.c  rx.h  schedule.c  schedule.h  state.c  state.h  sync.c  sync.h  tx.c  tx.h  version.c  version.h  wire.c  wire.h
tests/: CMakeLists.txt  test_awdl_election.cpp  test_awdl_peers.cpp  test_awdl_sync.cpp  test_wire.cpp
